fix img overflow

--- a/style.css
+++ b/style.css
@@ -134,6 +134,6 @@ input.search-submit {
 }
 
 .card-logo {
-    max-height: 100%;
-    max-width: 100%;
+    width: 100%;
+    object-fit: cover;
 }
